welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:19: error: ambiguous reference to overloaded definition,
both method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
and  method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faitPousserFleur(Color.red)
  ^FlowerCase:21: error: ambiguous reference to overloaded definition,
both method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
and  method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faitPousserFleur(Color.cyan)
  ^FlowerCase:26: error: ambiguous reference to overloaded definition,
both method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
and  method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faitPousserFleur(Color.pink)
  ^FlowerCase:28: error: ambiguous reference to overloaded definition,
both method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
and  method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faitPousserFleur(Color.green)
  ^FlowerCase:34: error: ambiguous reference to overloaded definition,
both method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
and  method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faitPousserFleur(Color.orange)
  ^FlowerCase:54: error: ambiguous reference to overloaded definition,
both method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
and  method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faitPousserFleur(Color.red)
  ^FlowerCase:56: error: ambiguous reference to overloaded definition,
both method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
and  method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faitPousserFleur(Color.cyan)
  ^FlowerCase:61: error: ambiguous reference to overloaded definition,
both method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
and  method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faitPousserFleur(Color.pink)
  ^FlowerCase:63: error: ambiguous reference to overloaded definition,
both method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
and  method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faitPousserFleur(Color.green)
  ^FlowerCase:69: error: ambiguous reference to overloaded definition,
both method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
and  method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faitPousserFleur(Color.orange)
  ^FlowerCase:73: error: ambiguous reference to overloaded definition,
both method faitQuartJardiniere in class FlowerCase of type ()Unit
and  method faitQuartJardiniere in class FlowerCase of type ()Unit
match argument types ()
  faitQuartJardiniere()
  ^FlowerCase:75: error: ambiguous reference to overloaded definition,
both method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
and  method faitPousserFleur in class FlowerCase of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faitPousserFleur(Color.blue)
  ^FlowerCase:79: error: ambiguous reference to overloaded definition,
both method faitQuartJardiniere in class FlowerCase of type ()Unit
and  method faitQuartJardiniere in class FlowerCase of type ()Unit
match argument types ()
  faitQuartJardiniere()
  ^FlowerCase:53: error: method faitQuartJardiniere is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerCase'
def faitQuartJardiniere(){
    ^FlowerCase:36: error: method faitPousserFleur is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerCase'
def faitPousserFleur(c:Color){
    ^